SSCSCI-1804 Documents tab - display in chronological order (Date)